[package]
name = "dotter"
version = "0.1.0"
edition = "2021"
description = "Change the way you configure you system"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.12", features = ["derive"] }
serde = { version = "1.0.194", features = ["derive"] }
toml = "0.8.8"
